rlang/tests/tests_resources/invalid_tests/invalid_goal.rlang
Goal Effect := (2 == 1 and 3) == a
Goal Action := (-123.034) and !(True)

